tests/fail/elaboration/numeric-literal/not-supported.snap
stdout = ''
stderr = '''
error: numeric literal not supported for expected type
  ┌─ tests/fail/elaboration/numeric-literal/not-supported.fathom:3:1
  │
3 │ 3 : Void
  │ ^

'''
